--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "autoprefixer": "^9.8.5",
     "graphql": "^15.3.0",
     "graphql-tag": "^2.10.4",
+    "moment-timezone": "^0.5.31",
     "postcss-cli": "^7.1.1",
+    "react-moment": "^0.9.7",
     "tailwindcss": "^1.5.1"
   }
 }
